sales-product/sales-product.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-product-deployment
  labels:
    app: sales-product
    version: v0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-product
  template:
    metadata:
      labels:
        app: sales-product
        version: v0
    spec:
      containers:
        - name: sales-product
          image: fofcn/sales-product:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sales-product-service
spec:
  type: ClusterIP
  selector:
    app: sales-product
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
